started making progress on the table rows of the shifts table

--- a/chippy_rota/templates/index.html
+++ b/chippy_rota/templates/index.html
@@ -92,7 +92,12 @@
             <th class="shifts-table-element">Thursday</th>    <!-- ok it works now lol -->
             <th class="shifts-table-element">Friday</th>
             <th class="shifts-table-element">Saturday</th>
-            <th class=""></th>
+            
+        </tr>
+        <tr>
+            {% for employee,mon,tue,wed,thu,fri,sat in all_shifts %}
+
+            {%endfor%}
         </tr>
         </table>
     </div>
